--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body {
     font-family: 'WDXL Lubrifont TC, sans-serif';
+    color: var(--cor-principal);
 }
 
 h1, h2, h5 {
@@ -15,10 +16,16 @@ color: var(--cor-secundaria);
 font-weight: 700;
 }
 
-footer a {
+.Lead, .btn-Link {
+    color: var(--cor-destaque);
+    font-weight: 700;
+    
+}
+
+a, .btn-Link:hover {
     color: var(--cor-principal);
 }
 
-footer a:hover {
+a:hover {
 color: var(--cor-destaque);
 }
